docs: redesign documentation around newcomer workflows (#116)
* docs: redesign guides around newcomer workflows

* docs: correct review findings

* docs: clarify sorted disk guard signals

* docs: improve newcomer README

* docs: distinguish learning from quickstart

* test: make parquet abort coverage deterministic

* docs: complete the newcomer documentation path

* docs: align quickstart with demo run

* docs: use exact demo command in quickstart